--- a/formadores 11 11 24/index.html
+++ b/formadores 11 11 24/index.html
@@ -20,7 +20,7 @@
         </section>
     </main>
     <footer>
-        <p>Desenvolvido por Silvio Sales</p>
+        <p>Desenvolvido por Décio Machado</p>
     </footer>
     <script type="module" src="graficos/informacoesGlobais.js"></script>
 </body>
