--- a/formadores 11 11 24/index.html
+++ b/formadores 11 11 24/index.html
@@ -22,6 +22,8 @@
     <footer>
         <p>Desenvolvido por Décio Machado</p>
     </footer>
+    <script type="module" src="gráficos/common.js"> </script>
     <script type="module" src="graficos/informacoesGlobais.js"></script>
+    <script type="module" src="graficos/quantidadeUsuario.js"></script>
 </body>
 </html>
